# cutedsl

./: .gitignore  EXPERIMENTS.md  README.md  pyproject.toml  test_comparison.py  test_sequence.py
.github/workflows/: ci.yml
cutechronos/: benchmark.py  benchmark_time_attention.py  foreign.py  kernel_backends.py  model.py  pipeline.py
cutechronos/cutlass_kernels/: __init__.py  rms_layernorm.py
cutechronos/modules/: __init__.py  feedforward.py  group_attention.py  time_attention.py
cutechronos/tests/: test_kernel_backends.py  test_lora_loading.py  test_offload.py  test_pipeline.py  test_pipeline_api.py  test_predict_df.py
cutechronos/triton_kernels/: __init__.py  attention.py
cuteparakeet/: __init__.py  benchmark.py  export_onnx.py
cutezimage/: __init__.py  benchmark.py  benchmark_blocks.py  benchmark_fused_qkv.py  image_metrics.py  model.py  pipeline.py
cutezimage/csrc/: CMakeLists.txt  cute_kernels_ext.cpp  cute_qk_norm.cu  cute_qk_norm.cuh  cute_rms_norm.cu  cute_rms_norm.cuh  cute_silu_gate.cu  cute_silu_gate.cuh  setup_cuda.py
cutezimage/tests/: conftest.py  create_eval_dataset.py  test_cuda_ext.py  test_image_metrics.py  test_kernel_benchmarks.py  test_kernels.py  test_model.py  test_pipeline.py
cutezimage/triton_kernels/: __init__.py  fused_adaln_norm.py  fused_qkv_norm_rope.py  fused_qkv_rope_sm120.py  fused_silu_gate_ffn.py  rms_norm.py  rope_complex.py
examples/: crypto_hourly_frontier.py  eval_exported_lora.py  lora_frontier.py  mixed_crypto_lora_transfer.py  multivariate_pair_eval.py
examples/chronos_wrappers/: Makefile  README.md  benchmark.py  tune_cutechronos.py
examples/chronos_wrappers/c/: main.c
examples/chronos_wrappers/go/: go.mod  main.go
examples/chronos_wrappers/include/: cutechronos_bridge.h
examples/chronos_wrappers/python/: ctypes_runner.py
examples/chronos_wrappers/src/: cutechronos_bridge.c
kernels/c/: Makefile  rms_norm.h  silu_gate.h  test_kernels  test_kernels.c
latentteleport/: __init__.py  benchmark.py  cache.py  combiner.py  confidence.py  config.py  dataset.py  demo.py  evaluate.py  gobed_bridge.py  judge.py  refine.py  sequence_combiner.py  step_forecaster.py  tokenizer.py  train.py  train_forecaster.py  train_sequence.py  trajectory.py
latentteleport/tests/: test_bigram_cache.py  test_cache.py  test_combiner.py  test_confidence.py  test_sequence_combiner.py  test_step_forecaster.py  test_tokenizer.py  test_trajectory.py
latentteleport/triton_kernels/: slerp.py
scripts/: daisy_zimage.sh  download_zimage_lowvram_weights.py  run_zimage_baselines.py  setup_external_zimage.sh  zimage_review_matrix.py
tests/: test_cuteparakeet.py  test_multivariate_pair_eval.py  test_zimage_sdcpp_benchmark.py  test_zimageaccelerated.py  test_zimagecontrol.py
tubroquant/: __init__.py  chronos_benchmark.py  codebooks.py  kernels.py  kv_cache.py  ops.py  packing.py  quantizer.py  rotation.py
tubroquant/csrc/: qk_scores.cu  qk_scores.cuh  tubroquant_ext.cpp
tubroquant/tests/: test_chronos_integration.py  test_ops.py  test_quantizer.py
zimageaccelerated/: __init__.py  benchmark.py  benchmark_transformer.py  generate_dataset.py  gpu_pool.py  model.py  sdcpp_benchmark.py
zimagecontrol/: __init__.py  conditioning.py  dataset.py  generate_dataset.py  infer.py  runtime.py  train.py
